feat(admin): widget selection popup

--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -47,6 +47,9 @@
   <!-- 4) Generic page renderer (builds header, sidebar, widgets)    -->
   <script type="module" src="/plainspace/main/pageRenderer.js"></script>
 
+  <!-- Widget popup overlay -->
+  <script type="module" src="/plainspace/dashboard/widgetPopup.js"></script>
+
   <!-- Search functionality for admin top bar -->
   <script type="module" src="/assets/js/adminSearch.js"></script>
 
