Use shared debounce utility for meltdown emitter

--- a/BlogposterCMS/public/pages.html
+++ b/BlogposterCMS/public/pages.html
@@ -12,7 +12,7 @@
   </div>
 
   <!-- meltdownEmitter sets window.meltdownEmit -->
-  <script src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/meltdownEmitter.js"></script>
   <script src="/assets/js/openExplorer.js"></script>
   <!-- Your ES-module picker -->
   <script type="module" src="/plainSpace/admin/pagePicker.js"></script>
