--- a/BlogposterCMS/public/index.html
+++ b/BlogposterCMS/public/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <!-- miniEmitter: your single Meltdown API tunnel -->
-  <script type="module" src="/assets/js/meltdownEmitter.js"></script>
+  <script src="/assets/js/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <!-- global media explorer -->
   <script src="/assets/js/openExplorer.js"></script>
