--- a/BlogposterCMS/public/pages.html
+++ b/BlogposterCMS/public/pages.html
@@ -13,6 +13,7 @@
 
   <!-- meltdownEmitter sets window.meltdownEmit -->
   <script src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/meltdownDebouncer.js"></script>
   <script src="/assets/js/openExplorer.js"></script>
   <!-- Your ES-module picker -->
   <script type="module" src="/plainSpace/admin/pagePicker.js"></script>
