--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -38,6 +38,7 @@
     </div>
   </div>
   <script type="module" src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/meltdownDebouncer.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script src="/assets/js/install.js"></script>
 </body>
