--- a/BlogposterCMS/public/login.html
+++ b/BlogposterCMS/public/login.html
@@ -12,7 +12,7 @@
   <div class="app-scope login-page">
     <div class="login-form form-container">
       <img id="logo" class="logo" src="/assets/logo/logo_blogposter_min_transparent.png" alt="BlogposterCMS Logo"/>
-      <div class="cms-title">Admin Panel</div>
+      <div class="cms-title">Welcome back!</div>
 
       <form id="loginForm">
         <div class="field">
