feat(ui): auto convert select dropdowns

--- a/BlogposterCMS/public/login.html
+++ b/BlogposterCMS/public/login.html
@@ -33,6 +33,7 @@
 
   <script type="module" src="/assets/js/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
+  <script type="module" src="/assets/js/customSelect.js"></script>
   <script type="module" src="/assets/js/firstInstallCheck.js"></script>
   <script src="/assets/js/login.js"></script>
   <script type="module" src="/assets/js/loginStrategiesPublic.js"></script>
