--- a/BlogposterCMS/public/index.html
+++ b/BlogposterCMS/public/index.html
@@ -16,6 +16,7 @@
   <!-- miniEmitter: your single Meltdown API tunnel -->
   <script src="/assets/js/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
+  <script type="module" src="/assets/js/customSelect.js"></script>
   <!-- global media explorer -->
   <script src="/assets/js/openExplorer.js"></script>
   <!-- Your pageRenderer, which now just calls miniEmitter(...) -->
