--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -47,6 +47,7 @@
 
   <script type="module" src="/assets/js/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
+  <script type="module" src="/assets/js/customSelect.js"></script>
   <script src="/assets/js/install.js"></script>
 </body>
 </html>
