--- a/BlogposterCMS/public/register.html
+++ b/BlogposterCMS/public/register.html
@@ -31,6 +31,7 @@
 
   <script type="module" src="/assets/js/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
+  <script type="module" src="/assets/js/customSelect.js"></script>
   <script src="/assets/js/register.js"></script>
 </body>
 </html>
