feat(settings): allow favicon selection

--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -46,6 +46,7 @@
   </div>
 
   <script type="module" src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script type="module" src="/assets/js/customSelect.js"></script>
   <script src="/assets/js/install.js"></script>
