--- a/BlogposterCMS/public/index.html
+++ b/BlogposterCMS/public/index.html
@@ -15,6 +15,7 @@
 
   <!-- miniEmitter: your single Meltdown API tunnel -->
   <script src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script type="module" src="/assets/js/customSelect.js"></script>
   <!-- global media explorer -->
