--- a/BlogposterCMS/public/login.html
+++ b/BlogposterCMS/public/login.html
@@ -32,6 +32,7 @@
   </div>
 
   <script type="module" src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script type="module" src="/assets/js/customSelect.js"></script>
   <script type="module" src="/assets/js/firstInstallCheck.js"></script>
