--- a/BlogposterCMS/public/register.html
+++ b/BlogposterCMS/public/register.html
@@ -30,6 +30,7 @@
   </div><!-- .app-scope -->
 
   <script type="module" src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script type="module" src="/assets/js/customSelect.js"></script>
   <script src="/assets/js/register.js"></script>
