Add missing resize icon

--- a/BlogposterCMS/public/index.html
+++ b/BlogposterCMS/public/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <!-- miniEmitter: your single Meltdown API tunnel -->
-  <script src="/assets/js/meltdownEmitter.js"></script>
+  <script src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script type="module" src="/assets/js/customSelect.js"></script>
