--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -28,7 +28,7 @@
 
 
   <!-- 2) Meltdown-Emitter wrapper (ES-module, needs the global above) -->
-  <script type="module" src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script type="module" src="/assets/js/customSelect.js"></script>
@@ -44,7 +44,7 @@
   <script type="module" src="/assets/js/pageDataLoader.js"></script>
 
   
-  <script src="/assets/js/icons.js"></script>
+  <script src="/build/icons.js"></script>
 
   <!-- 4) Generic page renderer (builds header, sidebar, widgets)    -->
   <script type="module" src="/plainspace/main/pageRenderer.js"></script>
