--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <script type="module" src="/assets/js/meltdownEmitter.js"></script>
+  <script type="module" src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script type="module" src="/assets/js/customSelect.js"></script>
