updated some stuff

--- a/BlogposterCMS/public/login.html
+++ b/BlogposterCMS/public/login.html
@@ -11,7 +11,7 @@
 
   <div class="app-scope login-page">
     <div class="login-form form-container">
-      <img id="logo" class="logo" src="/assets/logo/logo_blogposter_min_transparent.png" alt="BlogposterCMS Logo"/>
+      <img id="logo" class="logo" src="/assets/icons/blogpostercms-logo.svg"" alt="BlogposterCMS Logo"/>
       <div class="cms-title">Welcome back!</div>
 
       <form id="loginForm">
