Revert "style: glass top header and workspace shell spacing"

--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -14,7 +14,7 @@
     <header id="top-header"></header>
     <header id="main-header"></header>
 
-    <div class="main-content workspace-shell">
+    <div class="main-content">
       <aside   id="sidebar"></aside>
 
       <section id="content">
