--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="app-scope admin-panel">
+    <header id="top-header"></header>
     <header id="main-header"></header>
 
     <div class="main-content">
@@ -54,7 +55,7 @@
   <!-- Search functionality for admin top bar -->
   <script type="module" src="/assets/js/adminSearch.js"></script>
 
-  <!-- Header icon actions -->
+  <!-- Top header icon actions -->
   <script type="module" src="/plainspace/dashboard/topHeaderActions.js"></script>
   <script type="module" src="/assets/js/notificationHub.js"></script>
   <script type="module" src="/plainspace/dashboard/pageActions.js"></script>
