Combine top and main headers

--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -11,7 +11,6 @@
 
 <body>
   <div class="app-scope admin-panel">
-    <header id="top-header"></header>
     <header id="main-header"></header>
 
     <div class="main-content">
@@ -55,8 +54,8 @@
   <!-- Search functionality for admin top bar -->
   <script type="module" src="/assets/js/adminSearch.js"></script>
 
-  <!-- Top header icon actions -->
-  <script type="module" src="/plainspace/dashboard/topHeaderActions.js"></script>
+  <!-- Header icon actions -->
+  <script type="module" src="/plainspace/dashboard/mainHeaderActions.js"></script>
   <script type="module" src="/assets/js/notificationHub.js"></script>
   <script type="module" src="/plainspace/dashboard/pageActions.js"></script>
   <!-- Content header actions -->
