feat: route native dialogs through UI events

--- a/BlogposterCMS/public/login.html
+++ b/BlogposterCMS/public/login.html
@@ -36,6 +36,7 @@
     </div>
   </div>
 
+    <script src="/assets/js/dialogOverrides.js"></script>
   <script type="module" src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
