--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -27,6 +27,7 @@
   <!-- ── JavaScript  (order matters!) ─────────────────────── -->
 
 
+  <script src="/assets/js/dialogOverrides.js"></script>
   <!-- 2) Meltdown-Emitter wrapper (ES-module, needs the global above) -->
   <script type="module" src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
