--- a/BlogposterCMS/public/login.html
+++ b/BlogposterCMS/public/login.html
@@ -36,7 +36,9 @@
     </div>
   </div>
 
+    <script src="/assets/js/uiEmitterStub.js"></script>
     <script src="/assets/js/dialogOverrides.js"></script>
+    <script src="/assets/js/dialogPreviewHandlers.js"></script>
   <script type="module" src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
