--- a/BlogposterCMS/public/register.html
+++ b/BlogposterCMS/public/register.html
@@ -29,7 +29,9 @@
     </div>
   </div><!-- .app-scope -->
 
+    <script src="/assets/js/uiEmitterStub.js"></script>
     <script src="/assets/js/dialogOverrides.js"></script>
+    <script src="/assets/js/dialogPreviewHandlers.js"></script>
   <script type="module" src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
