--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -25,10 +25,7 @@
   </div>
 
   <!-- ── JavaScript  (order matters!) ─────────────────────── -->
-  <script src="/assets/js/uiEmitterStub.js"></script>
-  <script src="/assets/js/dialogOverrides.js"></script>
-  <script src="/assets/js/dialogPreviewHandlers.js"></script>
-  <!-- 2) Meltdown-Emitter wrapper (ES-module, needs the global above) -->
+  <!-- Meltdown-Emitter wrapper (ES-module) -->
   <script type="module" src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/faviconLoader.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
