--- a/BlogposterCMS/public/login.html
+++ b/BlogposterCMS/public/login.html
@@ -5,6 +5,9 @@
   <title>Admin Panel</title>
   <link rel="stylesheet" href="/assets/css/site.css" />
   <meta name="csrf-token" content="{{CSRF_TOKEN}}">
+  <meta name="allow-weak-creds" content="{{ALLOW_WEAK_CREDS}}">
+  <meta name="dev-autologin" content="{{DEV_AUTOLOGIN}}">
+  <meta name="dev-user" content="{{DEV_USER}}">
 </head>
 <body>
   <div class="app-scope login-page">
