--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -10,13 +10,10 @@
   <meta name="dev-user" content="{{DEV_USER}}">
 </head>
 <body>
-  <a class="branding-top-left" href="/">
-    <img src="/assets/icons/blogpostercms-logo.svg" alt="BlogposterCMS Logo" width="120">
-  </a>
 
   <div class="app-scope login-page">
     <div class="login-form form-container">
-      <img id="logo" class="logo" src="/assets/logo/logo_blogposter_min_transparent.png" alt="BlogposterCMS Logo"/>
+      <img id="logo" class="logo" src="/assets/icons/blogpostercms-logo.svg" alt="BlogposterCMS Logo"/>
       <div class="cms-title">Initial Setup</div>
 
       <ul class="install-steps">
@@ -25,12 +22,13 @@
         <li></li>
         <li></li>
       </ul>
+      
 
       <div id="step-welcome" class="step active">
         <p>Let's set up Blogposter in 2 min. No bullshit.</p>
         <div class="actions">
           <button id="startSetup" class="button">Start setup</button>
-          <a href="/docs" class="button ghost">Docs</a>
+          <a href="https://github.com/BlogposterCMS/BlogposterCMS/blob/main/docs/index.md" class="button ghost">Docs</a>
         </div>
       </div>
 
