chore: isolate install buttons from login styles

--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div class="app-scope login-page">
+  <div class="app-scope install-page">
     <div class="login-form form-container">
       <img id="logo" class="logo" src="/assets/icons/blogpostercms-logo.svg" alt="BlogposterCMS Logo"/>
       <div class="cms-title">Initial Setup</div>
