fix: style install wizard primary buttons

--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -27,7 +27,7 @@
       <div id="step-welcome" class="step active">
         <p>Let's set up Blogposter in 2 min. No bullshit.</p>
         <div class="actions">
-          <button id="startSetup" class="button">Start setup</button>
+          <button id="startSetup" class="button primary">Start setup</button>
           <a href="https://github.com/BlogposterCMS/BlogposterCMS/blob/main/docs/index.md" class="button ghost">Docs</a>
         </div>
       </div>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="actions">
-          <button type="submit" class="button">Continue</button>
+          <button type="submit" class="button primary">Continue</button>
         </div>
       </form>
 
@@ -73,7 +73,7 @@
 
         <div class="actions">
           <button type="button" id="skipSite" class="button ghost">Skip all</button>
-          <button type="submit" class="button">Continue</button>
+          <button type="submit" class="button primary">Continue</button>
         </div>
       </form>
 
