updated designer app

--- a/BlogposterCMS/apps/designer/index.html
+++ b/BlogposterCMS/apps/designer/index.html
@@ -11,6 +11,5 @@
   <div id="content"></div>
   <script src="/build/meltdownEmitter.js"></script>
   <script src="/build/icons.js"></script>
-  <script type="module" src="index.js"></script>
-</body>
+  <script src="/build/designer.js"></script></body>
 </html>
