--- a/BlogposterCMS/apps/designer/index.html
+++ b/BlogposterCMS/apps/designer/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Designer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/assets/css/designer.css">
+  <link rel="stylesheet" href="assets/css/designer.css">
 <body>
   <div id="sidebar"></div>
   <div id="content"></div>
