Refactor header styles, streamline background toolbar initialization, and enhance font loading in index.html
- Removed min-height from header styles in _header.scss for improved layout flexibility.
- Simplified background toolbar initialization by directly prepending to the body in backgroundToolbar.js.
- Added a new script for font loading in index.html to enhance typography management.
- Cleaned up package-lock.json by removing unused http-errors dependencies.
- Updated textBoxWidget.js to import the designer editor from the build directory.
- Added designerEditor entry point in webpack.config.js for better module management.

--- a/BlogposterCMS/apps/designer/index.html
+++ b/BlogposterCMS/apps/designer/index.html
@@ -9,6 +9,7 @@
   <div id="sidebar"></div>
   <div id="content"></div>
   <script src="/build/meltdownEmitter.js"></script>
+  <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script src="/build/icons.js"></script>
   <script src="/build/designer.js"></script></body>
 </html>
