Use semantic aside for builder sidebar

--- a/BlogposterCMS/apps/designer/index.html
+++ b/BlogposterCMS/apps/designer/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/apps/designer/assets/css/designer.css">
 <body>
-  <div id="sidebar"></div>
+  <aside id="sidebar" class="sidebar builder-sidebar" aria-label="Builder sidebar"></aside>
   <div id="content"></div>
+  <footer id="builderFooter" class="builder-footer"></footer>
   <script src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
   <script src="/build/icons.js"></script>
