feat(builder): inline panel beside sidebar

--- a/BlogposterCMS/apps/designer/index.html
+++ b/BlogposterCMS/apps/designer/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="builderRow" class="builder-row">
     <aside id="sidebar" class="sidebar builder-sidebar" aria-label="Builder sidebar"></aside>
+    <aside id="builderPanel" class="hidden" aria-label="Builder panel"></aside>
     <div id="content">
       <main id="builderMain"></main>
       <footer id="builderFooter" class="builder-footer"></footer>
