feat: show publish panel as inline aside

--- a/BlogposterCMS/apps/designer/index.html
+++ b/BlogposterCMS/apps/designer/index.html
@@ -12,7 +12,7 @@
       <main id="builderMain"></main>
       <footer id="builderFooter" class="builder-footer"></footer>
     </div>
-    <aside id="publishPanel" class="publish-popup hidden" aria-label="Publish popup"></aside>
+    <aside id="publishPanel" class="publish-panel hidden" aria-label="Publish panel"></aside>
   </div>
   <script src="/build/meltdownEmitter.js"></script>
   <script type="module" src="/assets/js/fontsLoader.js"></script>
