Show install color picker inline under project name

--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -65,10 +65,10 @@
           <label for="projectName">Project name</label>
         </div>
 
-        <div class="field">
+        <div class="color-picker-field">
+          <label for="favoriteColor">Favorite color</label>
           <input id="favoriteColor" name="favoriteColor" type="hidden" value="#008080">
-          <button type="button" id="colorPickerToggle" class="color-picker-toggle" style="background-color:#008080"></button>
-          <label for="colorPickerToggle">Favorite color</label>
+          <div id="colorPickerContainer"></div>
         </div>
 
         <div class="actions">
