--- a/BlogposterCMS/public/install.html
+++ b/BlogposterCMS/public/install.html
@@ -72,6 +72,7 @@
         </div>
 
         <div class="actions">
+          <button type="button" id="backToAdmin" class="button ghost">Back</button>
           <button type="button" id="skipSite" class="button ghost">Skip all</button>
           <button type="submit" class="button primary">Continue</button>
         </div>
