Fix subpage parent resolution in workspace nav

--- a/BlogposterCMS/public/admin.html
+++ b/BlogposterCMS/public/admin.html
@@ -59,7 +59,7 @@
   <script type="module" src="/plainspace/dashboard/pageActions.js"></script>
   <!-- Content header actions -->
   <script type="module" src="/plainspace/dashboard/contentHeaderActions.js"></script>
-  <script type="module" src="/plainspace/dashboard/workspaces.js"></script>
+  <script type="module" src="/build/workspaces.js"></script>
 
 
 </body>
